[package]
name = "parceljs"
version = "0.1.0"
authors = ["SpiralP <spiral.palmer@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = { version = "1.0.7", optional = true }
includedir = { git = "https://github.com/SpiralP/includedir.git" }
phf = "0.7.24"
warp = { git = "https://github.com/seanmonstar/warp.git", optional = true }

[build-dependencies]
includedir_codegen = { git = "https://github.com/SpiralP/includedir.git" }
walkdir = "2.2.9"

[features]
actix = ["actix-web"]
