[package]
name = "parceljs"
version = "0.1.0"
authors = ["SpiralP <spiral.palmer@gmail.com>"]
edition = "2018"

[dependencies]
actix-web = { version = "1.0.9", optional = true }
includedir = { git = "https://github.com/SpiralP/includedir.git" }
phf = "0.8.0"
warp = { git = "https://github.com/seanmonstar/warp.git", optional = true }

[build-dependencies]
includedir_codegen = { git = "https://github.com/SpiralP/includedir.git" }
walkdir = "2.2.9"

[features]
actix = ["actix-web"]
