[package]
name = "parceljs"
version = "0.1.0"
authors = ["SpiralP <spiral.palmer@gmail.com>"]
edition = "2018"

[dependencies]
actix-web = { version = "2.0.0", optional = true }
includedir = { git = "https://github.com/SpiralP/includedir.git" }
phf = "0.8.0"
warp = { version = "0.2.1", optional = true }

[build-dependencies]
includedir_codegen = { git = "https://github.com/SpiralP/includedir.git" }
walkdir = "2.3.1"

[features]
actix = ["actix-web"]
