[package]
name = "parceljs-example"
version = "0.1.0"
authors = ["SpiralP <spiral.palmer@gmail.com>"]
edition = "2018"

[dependencies]
actix-rt = { version = "1.0.0", optional = true }
actix-web = { version = "2.0.0", optional = true }
parceljs = { path = "../lib" }
tokio = { version = "0.2.16", features = ["macros"], optional = true }
warp = { version = "0.2.2", optional = true }

[build-dependencies]
parceljs-builder = { path = "../builder" }

[features]
with_actix = ["actix-web", "actix-rt", "parceljs/actix"]
with_warp = ["warp", "tokio", "parceljs/warp"]
