[package]
name = "parceljs"
version = "0.1.0"
authors = ["SpiralP <spiral.palmer@gmail.com>"]
edition = "2018"

[dependencies]
actix-web = { version = "2.0.0", optional = true }
failure = "0.1.8"
phf = "0.8.0"
warp = { version = "0.2.3", optional = true }
zstd = "0.5.3"

[features]
actix = ["actix-web"]
